--- a/website/index.html
+++ b/website/index.html
@@ -10,27 +10,20 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      user-select: none;
     }
+
     html, body {
       height: 100%;
       overflow-x: hidden;
       background-color: white;
       font-family: Arial, sans-serif;
-      user-select: none;
+      color: black;
     }
-    img {
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      -webkit-touch-callout: none;
-      -webkit-user-drag: none;
-      user-drag: none;
-      pointer-events: none;
-    }
+
     header {
       position: fixed;
-      top: 8px; /* reduced from 0 to add slight spacing */
+      top: 0;
       left: 0;
       width: 100vw;
       height: 64px;
@@ -39,27 +32,27 @@
       align-items: center;
       padding: 12px 16px;
       background-color: white;
-      color: black;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
     }
+
     .menu-icon, .cart-icon-container {
       display: flex;
       align-items: center;
-      height: 22px; 
+      height: 22px;
       cursor: pointer;
       z-index: 1300;
       position: relative;
-      user-select: none;
     }
+
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px; 
+      margin-top: 4px;
       justify-content: center;
       position: relative;
-      transition: all 0.4s ease;
     }
+
     .menu-icon div {
       position: absolute;
       width: 22px;
@@ -67,17 +60,13 @@
       background-color: black;
       left: 0;
       border-radius: 2px;
-      transition: transform 0.4s ease, opacity 0.4s ease, top 0.4s ease;
+      transition: all 0.4s ease;
     }
-    .menu-icon div:nth-child(1) {
-      top: 0;
-    }
-    .menu-icon div:nth-child(2) {
-      top: 7px;
-    }
-    .menu-icon div:nth-child(3) {
-      top: 14px;
-    }
+
+    .menu-icon div:nth-child(1) { top: 0; }
+    .menu-icon div:nth-child(2) { top: 7px; }
+    .menu-icon div:nth-child(3) { top: 14px; }
+
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
       top: 7px;
@@ -89,26 +78,24 @@
       transform: rotate(-45deg);
       top: 7px;
     }
+
     .logo-container {
       position: absolute;
       left: 50%;
       top: 57%;
       transform: translate(-50%, -50%);
       z-index: 1300;
-      cursor: pointer;
-      user-select: none;
     }
+
     .logo {
       height: 36px;
-      user-select: none;
-      pointer-events: none;
     }
+
     .cart-icon {
       height: 22px;
       display: block;
-      user-select: none;
-      pointer-events: auto;
     }
+
     .cart-count {
       position: absolute;
       top: -6px;
@@ -122,83 +109,81 @@
       min-width: 16px;
       text-align: center;
       display: none;
-      user-select: none;
     }
 
     .image-box {
-      margin-top: 56px; /* reduced from 64px */
+      margin-top: 64px;
       width: 100%;
       height: 400px;
-      overflow: hidden;
-      background-color: #222;
       position: relative;
-      user-select: none;
+      overflow: hidden;
     }
-    .slides-wrapper {
-      display: flex;
-      height: 100%;
-      width: 300%;
-      transition: transform 0.5s ease-in-out; /* faster smooth slide */
-    }
+
     .slide-img {
+      position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      user-select: none;
-      pointer-events: none;
-      flex-shrink: 0;
+      transition: transform 0.6s ease-in-out;
     }
+
+    .slider-container {
+      display: flex;
+      width: 300%;
+      height: 100%;
+      transition: transform 0.6s ease-in-out;
+    }
+
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 16px;
-      height: 16px;
+      width: 18px;
+      height: 18px;
       border: solid white;
-      border-width: 0 3px 3px 0;
-      padding: 3px;
+      border-width: 0 2px 2px 0;
+      padding: 5px;
       cursor: pointer;
       z-index: 2;
-      user-select: none;
     }
+
     .arrow.left {
       left: 10px;
-      transform: translateY(-50%) rotate(135deg);
+      transform: rotate(135deg);
     }
+
     .arrow.right {
       right: 10px;
-      transform: translateY(-50%) rotate(-45deg);
+      transform: rotate(-45deg);
     }
+
     .sidebar {
       position: fixed;
       top: 0;
-      left: 0;
+      left: -100%;
       width: 100vw;
       height: 100vh;
       background-color: white;
       font-family: 'Cardo', serif;
+      transition: left 0.4s ease;
+      z-index: 1100;
       color: black;
       font-size: 24px;
-      user-select: none;
       padding: 80px 20px 20px 20px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       overflow-y: auto;
-      pointer-events: none;
-      transform: translateX(-100%);
-      opacity: 0;
-      transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.35s ease-in-out;
-      z-index: 1100;
     }
+
     .sidebar.open {
-      transform: translateX(0);
-      opacity: 1;
-      pointer-events: auto;
+      left: 0;
     }
+
     main {
       display: none;
     }
+
     @media (min-width: 768px) {
       header {
         display: none;
@@ -226,13 +211,13 @@
   </header>
 
   <div class="image-box" aria-label="Image slideshow">
-    <div class="slides-wrapper" id="slidesWrapper">
-      <img class="slide-img" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80" alt="Sample Image 1" />
-      <img class="slide-img" src="https://images.unsplash.com/photo-1526403228070-85706c1f5fdb?auto=format&fit=crop&w=1200&q=80" alt="Sample Image 2" />
-      <img class="slide-img" src="https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1200&q=80" alt="Sample Image 3" />
+    <div class="slider-container" id="slider">
+      <img class="slide-img" src="https://via.placeholder.com/800x800.png?text=Image+1" alt="Sample Image 1" />
+      <img class="slide-img" src="https://via.placeholder.com/800x800.png?text=Image+2" alt="Sample Image 2" />
+      <img class="slide-img" src="https://via.placeholder.com/800x800.png?text=Image+3" alt="Sample Image 3" />
     </div>
-    <div class="arrow left" onclick="prevSlide()" role="button" tabindex="0" aria-label="Previous slide"></div>
-    <div class="arrow right" onclick="nextSlide()" role="button" tabindex="0" aria-label="Next slide"></div>
+    <div class="arrow left" onclick="prevSlide()"></div>
+    <div class="arrow right" onclick="nextSlide()"></div>
   </div>
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
@@ -244,63 +229,51 @@
     const sidebar = document.getElementById('sidebar');
     const logoContainer = document.getElementById('logoContainer');
     const cartCountEl = document.getElementById('cartCount');
-    const slidesWrapper = document.getElementById('slidesWrapper');
-    const totalSlides = slidesWrapper.children.length;
+    const slider = document.getElementById('slider');
+    const slides = slider.querySelectorAll('.slide-img');
     let currentSlide = 0;
 
-    function toggleSidebar() {
-      const isOpen = menuToggle.classList.toggle('open');
-      sidebar.classList.toggle('open', isOpen);
-      sidebar.setAttribute('aria-hidden', !isOpen);
-    }
-
-    menuToggle.addEventListener('click', toggleSidebar);
-    menuToggle.addEventListener('keydown', (e) => {
-      if(e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        toggleSidebar();
-      }
-    });
-
-    logoContainer.addEventListener('click', () => {
-      document.querySelector('header').style.transition = 'opacity 0.3s ease';
-      document.querySelector('header').style.opacity = '0.6';
-      setTimeout(() => {
-        window.location.href = '/website/';
-      }, 300);
-    });
-    logoContainer.addEventListener('keydown', (e) => {
-      if(e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        logoContainer.click();
-      }
-    });
-
     function updateSlidePosition() {
-      slidesWrapper.style.transform = `translateX(-${currentSlide * 100}%)`;
+      slider.style.transform = `translateX(-${currentSlide * 100}%)`;
     }
 
     function nextSlide() {
-      currentSlide = (currentSlide + 1) % totalSlides;
+      currentSlide = (currentSlide + 1) % slides.length;
       updateSlidePosition();
     }
 
     function prevSlide() {
-      currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
+      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
       updateSlidePosition();
     }
 
-    setInterval(() => {
-      nextSlide();
-    }, 10000);
+    setInterval(nextSlide, 10000);
+
+    menuToggle.addEventListener('click', () => {
+      const isOpen = menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open', isOpen);
+      sidebar.setAttribute('aria-hidden', !isOpen);
+    });
+
+    logoContainer.addEventListener('click', () => {
+      window.location.href = '/website/';
+    });
 
     function updateCartCount(count) {
       cartCountEl.textContent = count;
       cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
     }
-    updateCartCount(0);
-    updateSlidePosition();
-  </script>
 
+    updateCartCount(0);
+
+    ['menuToggle', 'logoContainer'].forEach(id => {
+      const el = document.getElementById(id);
+      el.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter') {
+          el.click();
+        }
+      });
+    });
+  </script>
 </body>
 </html>
