--- a/website/index.html
+++ b/website/index.html
@@ -119,27 +119,33 @@
       overflow: hidden;
     }
 
-    .slide-img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: transform 0.6s ease-in-out;
-    }
-
     .slider-container {
       display: flex;
       width: 300%;
       height: 100%;
-      transition: transform 0.6s ease-in-out;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .slide-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: relative;
+    }
+
+    .slide-wrapper {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      flex-shrink: 0;
     }
 
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 18px;
-      height: 18px;
+      width: 16px;
+      height: 16px;
       border: solid white;
       border-width: 0 2px 2px 0;
       padding: 5px;
@@ -149,23 +155,24 @@
 
     .arrow.left {
       left: 10px;
-      transform: rotate(135deg);
+      transform: translateY(-50%) rotate(135deg);
     }
 
     .arrow.right {
       right: 10px;
-      transform: rotate(-45deg);
+      transform: translateY(-50%) rotate(-45deg);
     }
 
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
+      left: 0;
+      transform: translateX(-100%);
       width: 100vw;
       height: 100vh;
       background-color: white;
       font-family: 'Cardo', serif;
-      transition: left 0.4s ease;
+      transition: transform 0.4s ease;
       z-index: 1100;
       color: black;
       font-size: 24px;
@@ -177,7 +184,7 @@
     }
 
     .sidebar.open {
-      left: 0;
+      transform: translateX(0);
     }
 
     main {
@@ -212,9 +219,15 @@
 
   <div class="image-box" aria-label="Image slideshow">
     <div class="slider-container" id="slider">
-      <img class="slide-img" src="https://via.placeholder.com/800x800.png?text=Image+1" alt="Sample Image 1" />
-      <img class="slide-img" src="https://via.placeholder.com/800x800.png?text=Image+2" alt="Sample Image 2" />
-      <img class="slide-img" src="https://via.placeholder.com/800x800.png?text=Image+3" alt="Sample Image 3" />
+      <div class="slide-wrapper">
+        <img class="slide-img" src="https://images.unsplash.com/photo-1602810316883-c0b14dd01530?auto=format&fit=crop&w=800&q=80" alt="Image 1" />
+      </div>
+      <div class="slide-wrapper">
+        <img class="slide-img" src="https://images.unsplash.com/photo-1600185364515-070528b9f51b?auto=format&fit=crop&w=800&q=80" alt="Image 2" />
+      </div>
+      <div class="slide-wrapper">
+        <img class="slide-img" src="https://images.unsplash.com/photo-1601589136050-3e14619e3f59?auto=format&fit=crop&w=800&q=80" alt="Image 3" />
+      </div>
     </div>
     <div class="arrow left" onclick="prevSlide()"></div>
     <div class="arrow right" onclick="nextSlide()"></div>
@@ -230,7 +243,7 @@
     const logoContainer = document.getElementById('logoContainer');
     const cartCountEl = document.getElementById('cartCount');
     const slider = document.getElementById('slider');
-    const slides = slider.querySelectorAll('.slide-img');
+    const slides = slider.querySelectorAll('.slide-wrapper');
     let currentSlide = 0;
 
     function updateSlidePosition() {
@@ -269,9 +282,7 @@
     ['menuToggle', 'logoContainer'].forEach(id => {
       const el = document.getElementById(id);
       el.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter') {
-          el.click();
-        }
+        if (e.key === 'Enter') el.click();
       });
     });
   </script>
