--- a/website/index.html
+++ b/website/index.html
@@ -116,28 +116,25 @@
       width: 100%;
       height: 400px;
       position: relative;
+      background-color: black;
       overflow: hidden;
     }
 
     .slider-container {
       display: flex;
-      width: 300%;
       height: 100%;
-      transition: transform 0.5s ease-in-out;
+      transition: transform 0.4s ease-in-out;
+    }
+
+    .slide-wrapper {
+      flex: 0 0 100%;
+      height: 100%;
     }
 
     .slide-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      position: relative;
-    }
-
-    .slide-wrapper {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      flex-shrink: 0;
     }
 
     .arrow {
