--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
   <title>Matt Scianna</title>
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Oswald:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Oswald:wght@400&display=swap" rel="stylesheet" />
 
   <style>
     * {
@@ -55,7 +55,6 @@
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px;
       justify-content: center;
       position: relative;
     }
@@ -102,7 +101,6 @@
 
     .cart-icon {
       height: 22px;
-      display: block;
     }
 
     .cart-count {
@@ -148,36 +146,36 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
+      width: 12px;
+      height: 12px;
       border: solid white;
-      border-width: 0 3px 3px 0;
-      padding: 5px;
+      border-width: 0 2px 2px 0;
+      padding: 6px;
       cursor: pointer;
       z-index: 2;
     }
 
     .arrow.left {
-      left: 10px;
-      transform: rotate(135deg) translateY(-50%);
+      left: 12px;
+      transform: translateY(-50%) rotate(135deg);
     }
 
     .arrow.right {
-      right: 10px;
-      transform: rotate(-45deg) translateY(-50%);
+      right: 12px;
+      transform: translateY(-50%) rotate(-45deg);
     }
 
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
+      left: 0;
       width: 100vw;
       height: 100vh;
       background-color: white;
       font-family: 'Oswald', sans-serif;
-      font-weight: 500;
-      transition: transform 0.4s ease;
+      font-weight: 400;
       transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
       z-index: 1100;
       color: black;
       font-size: 24px;
@@ -190,7 +188,7 @@
     }
 
     .sidebar.open {
-      transform: translateX(0%);
+      transform: translateX(0);
     }
 
     main {
