--- a/website/index.html
+++ b/website/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      user-select: none;
     }
 
     html, body {
@@ -21,13 +22,6 @@
 
     body {
       color: black;
-      user-select: none;
-    }
-
-    img {
-      user-select: none;
-      pointer-events: none;
-      -webkit-user-drag: none;
     }
 
     header {
@@ -41,17 +35,24 @@
       align-items: center;
       padding: 12px 16px;
       background-color: white;
-      border-bottom: 1px solid #ccc;
       z-index: 1200;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .menu-icon, .cart-icon-container {
+      display: flex;
+      align-items: center;
+      height: 22px;
+      cursor: pointer;
+      z-index: 1300;
     }
 
     .menu-icon {
       width: 22px;
       height: 16px;
       margin-top: 4px;
+      justify-content: center;
       position: relative;
-      cursor: pointer;
-      z-index: 1300;
     }
 
     .menu-icon div {
@@ -59,9 +60,8 @@
       width: 22px;
       height: 2px;
       background-color: black;
-      left: 0;
       border-radius: 2px;
-      transition: all 0.4s ease;
+      transition: all 0.3s ease;
     }
 
     .menu-icon div:nth-child(1) { top: 0; }
@@ -87,20 +87,85 @@
       left: 50%;
       top: 57%;
       transform: translate(-50%, -50%);
-      cursor: pointer;
       z-index: 1300;
     }
 
     .logo {
       height: 36px;
-    }
-
-    .cart-icon-container {
-      height: 22px;
+      cursor: pointer;
     }
 
     .cart-icon {
       height: 22px;
+    }
+
+    .cart-count {
+      position: absolute;
+      top: -6px;
+      right: -6px;
+      background-color: white;
+      color: #111;
+      border-radius: 50%;
+      font-size: 10px;
+      padding: 2px 5px;
+      line-height: 1;
+      min-width: 16px;
+      text-align: center;
+      display: none;
+    }
+
+    .image-box {
+      margin-top: 64px;
+      width: 100%;
+      height: 400px;
+      background-color: black;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .slider {
+      display: flex;
+      width: 400%;
+      height: 100%;
+      animation: slide 40s linear infinite;
+    }
+
+    .slider img {
+      width: 100vw;
+      height: 100%;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+
+    @keyframes slide {
+      0%   { transform: translateX(0); }
+      25%  { transform: translateX(-100vw); }
+      50%  { transform: translateX(-200vw); }
+      75%  { transform: translateX(-300vw); }
+      100% { transform: translateX(-400vw); }
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+      border: solid white;
+      border-width: 0 2px 2px 0;
+      padding: 5px;
+      cursor: pointer;
+      z-index: 2;
+    }
+
+    .arrow.left {
+      left: 10px;
+      transform: rotate(135deg);
+    }
+
+    .arrow.right {
+      right: 10px;
+      transform: rotate(-45deg);
     }
 
     .sidebar {
@@ -111,64 +176,19 @@
       height: 100vh;
       background-color: white;
       font-family: 'Oswald', sans-serif;
-      font-weight: 400;
-      transition: left 0.4s ease;
-      z-index: 1100;
-      color: black;
+      font-weight: 500;
       font-size: 24px;
+      transition: left 0.3s ease;
+      z-index: 1100;
       padding: 80px 20px 20px 20px;
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
+      overflow-y: auto;
     }
 
     .sidebar.open {
       left: 0;
-    }
-
-    .image-box {
-      margin-top: 64px;
-      width: 100%;
-      height: 400px;
-      position: relative;
-      background-color: black;
-      overflow: hidden;
-    }
-
-    .slider-wrapper {
-      display: flex;
-      width: 300%;
-      height: 100%;
-      transition: transform 0.5s ease-in-out;
-    }
-
-    .slider-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      flex-shrink: 0;
-    }
-
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 14px;
-      height: 14px;
-      border: solid white;
-      border-width: 0 3px 3px 0;
-      padding: 4px;
-      cursor: pointer;
-      z-index: 2;
-    }
-
-    .arrow.left {
-      left: 10px;
-      transform: translateY(-50%) rotate(135deg);
-    }
-
-    .arrow.right {
-      right: 10px;
-      transform: translateY(-50%) rotate(-45deg);
     }
 
     @media (min-width: 768px) {
@@ -181,69 +201,54 @@
 <body>
 
   <header>
-    <div id="menuToggle" class="menu-icon">
+    <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
       <div></div>
       <div></div>
       <div></div>
     </div>
 
-    <div class="logo-container" id="logoContainer">
+    <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     </div>
 
-    <div class="cart-icon-container">
+    <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
+      <div class="cart-count" id="cartCount">0</div>
     </div>
   </header>
 
-  <nav id="sidebar" class="sidebar">
+  <div class="image-box">
+    <div class="slider">
+      <img src="https://via.placeholder.com/800x800?text=Image+1" alt="Image 1" />
+      <img src="https://via.placeholder.com/800x800?text=Image+2" alt="Image 2" />
+      <img src="https://via.placeholder.com/800x800?text=Image+3" alt="Image 3" />
+      <img src="https://via.placeholder.com/800x800?text=Image+4" alt="Image 4" />
+    </div>
+    <div class="arrow left"></div>
+    <div class="arrow right"></div>
+  </div>
+
+  <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
     <p>Sidebar content goes here.</p>
   </nav>
-
-  <div class="image-box">
-    <div class="slider-wrapper" id="sliderWrapper">
-      <img src="https://via.placeholder.com/600x600/ff4444/ffffff?text=Image+1" class="slider-image" />
-      <img src="https://via.placeholder.com/600x600/44ff44/ffffff?text=Image+2" class="slider-image" />
-      <img src="https://via.placeholder.com/600x600/4444ff/ffffff?text=Image+3" class="slider-image" />
-    </div>
-    <div class="arrow left" onclick="prevSlide()"></div>
-    <div class="arrow right" onclick="nextSlide()"></div>
-  </div>
 
   <script>
     const menuToggle = document.getElementById('menuToggle');
     const sidebar = document.getElementById('sidebar');
     const logoContainer = document.getElementById('logoContainer');
-    const sliderWrapper = document.getElementById('sliderWrapper');
-
-    let currentSlide = 0;
-    const totalSlides = 3;
-
-    function showSlide(index) {
-      sliderWrapper.style.transform = `translateX(-${index * 100}%)`;
-    }
-
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % totalSlides;
-      showSlide(currentSlide);
-    }
-
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
-      showSlide(currentSlide);
-    }
-
-    setInterval(nextSlide, 10000);
+    const cartCountEl = document.getElementById('cartCount');
 
     menuToggle.addEventListener('click', () => {
-      menuToggle.classList.toggle('open');
-      sidebar.classList.toggle('open');
+      const isOpen = menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open', isOpen);
     });
 
     logoContainer.addEventListener('click', () => {
-      window.location.reload();
+      location.reload();
     });
-  </script>
 
+    cartCountEl.textContent = "0";
+    cartCountEl.style.display = "none";
+  </script>
 </body>
 </html>
