--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Trade+Gothic+Condensed&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -20,6 +21,10 @@
       font-family: Arial, sans-serif;
     }
 
+    body {
+      color: black;
+    }
+
     header {
       position: fixed;
       top: 0;
@@ -31,20 +36,25 @@
       align-items: center;
       padding: 12px 16px;
       background-color: white;
-      color: black;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
+    }
+
+    .menu-icon, .cart-icon-container {
+      display: flex;
+      align-items: center;
+      height: 22px; 
+      cursor: pointer;
+      z-index: 1300;
+      position: relative;
     }
 
     .menu-icon {
       width: 22px;
       height: 16px;
       margin-top: 4px;
-      display: flex;
       justify-content: center;
       position: relative;
-      cursor: pointer;
-      z-index: 1300;
     }
 
     .menu-icon div {
@@ -87,18 +97,8 @@
       height: 36px;
     }
 
-    .cart-icon-container {
-      display: flex;
-      align-items: center;
-      height: 22px;
-      cursor: pointer;
-      z-index: 1300;
-      position: relative;
-    }
-
     .cart-icon {
       height: 22px;
-      display: block;
     }
 
     .cart-count {
@@ -110,7 +110,6 @@
       border-radius: 50%;
       font-size: 10px;
       padding: 2px 5px;
-      line-height: 1;
       min-width: 16px;
       text-align: center;
       display: none;
@@ -120,46 +119,57 @@
       margin-top: 64px;
       width: 100%;
       height: 400px;
-      position: relative;
-      background-color: black;
       overflow: hidden;
+      background: black;
+      position: relative;
     }
 
-    .slide-wrapper {
+    .slider {
       display: flex;
+      width: 300%;
+      animation: slide 30s linear infinite;
+    }
+
+    .slide {
+      width: 100vw;
+      height: 400px;
+      flex-shrink: 0;
+    }
+
+    .slide img {
       width: 100%;
       height: 100%;
-      transition: transform 0.6s ease-in-out;
+      object-fit: cover;
     }
 
-    .slide-img {
-      min-width: 100%;
-      height: 400px;
-      object-fit: cover;
-      pointer-events: none;
+    @keyframes slide {
+      0% { transform: translateX(0); }
+      33% { transform: translateX(-100vw); }
+      66% { transform: translateX(-200vw); }
+      100% { transform: translateX(-300vw); }
     }
 
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 18px;
-      height: 18px;
+      width: 16px;
+      height: 16px;
       border: solid white;
-      border-width: 0 3px 3px 0;
-      padding: 6px;
+      border-width: 0 2px 2px 0;
+      padding: 5px;
       cursor: pointer;
       z-index: 2;
     }
 
     .arrow.left {
       left: 10px;
-      transform: rotate(135deg) translateY(-50%);
+      transform: rotate(135deg);
     }
 
     .arrow.right {
       right: 10px;
-      transform: rotate(-45deg) translateY(-50%);
+      transform: rotate(-45deg);
     }
 
     .sidebar {
@@ -172,9 +182,8 @@
       font-family: 'Oswald', sans-serif;
       transition: left 0.4s ease-in-out;
       z-index: 1100;
-      color: black;
       font-size: 24px;
-      padding: 80px 20px 20px 20px;
+      padding: 80px 20px 20px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -183,10 +192,6 @@
 
     .sidebar.open {
       left: 0;
-    }
-
-    main {
-      display: none;
     }
 
     @media (min-width: 768px) {
@@ -198,84 +203,68 @@
 </head>
 <body>
 
-  <header>
-    <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-
-    <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo" class="logo" />
-    </div>
-
-    <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
-      <div class="cart-count" id="cartCount">0</div>
-    </div>
-  </header>
-
-  <div class="image-box">
-    <div class="slide-wrapper" id="slideWrapper">
-      <img class="slide-img" src="https://via.placeholder.com/800x800?text=Image+1" alt="Image 1" />
-      <img class="slide-img" src="https://via.placeholder.com/800x800?text=Image+2" alt="Image 2" />
-      <img class="slide-img" src="https://via.placeholder.com/800x800?text=Image+3" alt="Image 3" />
-    </div>
-    <div class="arrow left" onclick="prevSlide()"></div>
-    <div class="arrow right" onclick="nextSlide()"></div>
+<header>
+  <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
 
-  <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
-    <p>Sidebar content goes here.</p>
-  </nav>
+  <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo" class="logo" />
+  </div>
 
-  <script>
-    const menuToggle = document.getElementById('menuToggle');
-    const sidebar = document.getElementById('sidebar');
-    const logoContainer = document.getElementById('logoContainer');
-    const cartCountEl = document.getElementById('cartCount');
-    const slideWrapper = document.getElementById('slideWrapper');
-    const slides = document.querySelectorAll('.slide-img');
-    let currentSlide = 0;
-    let totalSlides = slides.length;
+  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
+    <div class="cart-count" id="cartCount">0</div>
+  </div>
+</header>
 
-    function updateCartCount(count) {
-      cartCountEl.textContent = count;
-      cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
-    }
+<div class="image-box" aria-label="Image slideshow">
+  <div class="slider">
+    <div class="slide"><img src="https://picsum.photos/800/800?random=1" alt="Image 1" /></div>
+    <div class="slide"><img src="https://picsum.photos/800/800?random=2" alt="Image 2" /></div>
+    <div class="slide"><img src="https://picsum.photos/800/800?random=3" alt="Image 3" /></div>
+  </div>
+  <div class="arrow left"></div>
+  <div class="arrow right"></div>
+</div>
 
-    updateCartCount(0);
+<nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
+  <p>Sidebar content goes here.</p>
+</nav>
 
-    menuToggle.addEventListener('click', () => {
-      const isOpen = menuToggle.classList.toggle('open');
-      sidebar.classList.toggle('open', isOpen);
-      sidebar.setAttribute('aria-hidden', !isOpen);
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const sidebar = document.getElementById('sidebar');
+  const logoContainer = document.getElementById('logoContainer');
+  const cartCountEl = document.getElementById('cartCount');
+
+  menuToggle.addEventListener('click', () => {
+    const isOpen = menuToggle.classList.toggle('open');
+    sidebar.classList.toggle('open', isOpen);
+    sidebar.setAttribute('aria-hidden', !isOpen);
+  });
+
+  logoContainer.addEventListener('click', () => {
+    window.location.reload();
+  });
+
+  ['menuToggle', 'logoContainer'].forEach(id => {
+    const el = document.getElementById(id);
+    el.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        el.click();
+      }
     });
+  });
 
-    logoContainer.addEventListener('click', () => {
-      window.location.reload();
-    });
+  function updateCartCount(count) {
+    cartCountEl.textContent = count;
+    cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
+  }
 
-    ['menuToggle', 'logoContainer'].forEach(id => {
-      const el = document.getElementById(id);
-      el.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter') {
-          el.click();
-        }
-      });
-    });
-
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % totalSlides;
-      slideWrapper.style.transform = `translateX(-${currentSlide * 100}%)`;
-    }
-
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
-      slideWrapper.style.transform = `translateX(-${currentSlide * 100}%)`;
-    }
-
-    setInterval(nextSlide, 10000);
-  </script>
+  updateCartCount(0);
+</script>
 </body>
 </html>
