--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Trade+Gothic+Condensed&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -43,7 +42,7 @@
     .menu-icon, .cart-icon-container {
       display: flex;
       align-items: center;
-      height: 22px; 
+      height: 22px;
       cursor: pointer;
       z-index: 1300;
       position: relative;
@@ -126,8 +125,7 @@
 
     .slider {
       display: flex;
-      width: 300%;
-      animation: slide 30s linear infinite;
+      transition: transform 1s ease-in-out;
     }
 
     .slide {
@@ -140,13 +138,6 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-    }
-
-    @keyframes slide {
-      0% { transform: translateX(0); }
-      33% { transform: translateX(-100vw); }
-      66% { transform: translateX(-200vw); }
-      100% { transform: translateX(-300vw); }
     }
 
     .arrow {
@@ -180,7 +171,7 @@
       height: 100vh;
       background-color: white;
       font-family: 'Oswald', sans-serif;
-      transition: left 0.4s ease-in-out;
+      transition: left 0.5s ease;
       z-index: 1100;
       font-size: 24px;
       padding: 80px 20px 20px;
@@ -221,7 +212,7 @@
 </header>
 
 <div class="image-box" aria-label="Image slideshow">
-  <div class="slider">
+  <div class="slider" id="slider">
     <div class="slide"><img src="https://picsum.photos/800/800?random=1" alt="Image 1" /></div>
     <div class="slide"><img src="https://picsum.photos/800/800?random=2" alt="Image 2" /></div>
     <div class="slide"><img src="https://picsum.photos/800/800?random=3" alt="Image 3" /></div>
@@ -265,6 +256,16 @@
   }
 
   updateCartCount(0);
+
+  // Infinite slider logic (one image at a time, 10s delay)
+  const slider = document.getElementById('slider');
+  const slides = slider.children;
+  let index = 0;
+
+  setInterval(() => {
+    index = (index + 1) % slides.length;
+    slider.style.transform = `translateX(-${index * 100}vw)`;
+  }, 10000);
 </script>
 </body>
 </html>
